// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autofocused input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input
        <!---->
    </label>
    <input aria-describedby="" aria-label="My Input" autofocus="autofocus" id="input-1" type="text" data-vv-as=" " data-vv-name="9" data-vv-scope="9" data-vv-validate-on="blur|input" class="" data-vv-id="9" aria-required="false" aria-invalid="false">
    <!---->
</div>
`;

exports[`Currency input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input
        <!---->
    </label>
    <div class="b-input-el currency"><span style="font-weight: bold;">$</span>
        <input aria-describedby="" aria-label="My Input" id="input-1" placeholder="0.00" type="number" data-vv-as=" " data-vv-name="3" data-vv-scope="3" data-vv-validate-on="blur|input" data-vv-id="3" aria-required="false"
            aria-invalid="false">
    </div>
    <!---->
</div>
`;

exports[`Disabled input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="b-disabled">
        My Input
        <!---->
    </label>
    <input aria-describedby="" aria-label="My Input" disabled="disabled" id="input-1" type="text" data-vv-as=" " data-vv-name="4" data-vv-scope="4" data-vv-validate-on="blur|input" class="" data-vv-id="4" aria-required="false" aria-invalid="false">
    <!---->
</div>
`;

exports[`Named input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input
        <!---->
    </label>
    <input aria-describedby="" aria-label="My Input" id="input-1" name="Name of Input" type="text" data-vv-as=" " data-vv-name="8" data-vv-scope="8" data-vv-validate-on="blur|input" class="" data-vv-id="8" aria-required="false" aria-invalid="false">
    <!---->
</div>
`;

exports[`Number input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input
        <!---->
    </label>
    <input aria-describedby="" aria-label="My Input" id="input-1" type="number" data-vv-as=" " data-vv-name="2" data-vv-scope="2" data-vv-validate-on="blur|input" class="" data-vv-id="2" aria-required="false" aria-invalid="false">
    <!---->
</div>
`;

exports[`Pattern input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input
        <!---->
    </label>
    <input aria-describedby="" aria-label="My Input" id="input-1" pattern="^([0-9]+)$" type="text" data-vv-as=" " data-vv-name="6" data-vv-scope="6" data-vv-validate-on="blur|input" class="" data-vv-id="6" aria-required="false" aria-invalid="false">
    <!---->
</div>
`;

exports[`Readonly input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input
        <!---->
    </label>
    <input aria-describedby="" aria-label="My Input" id="input-1" readonly="readonly" type="text" data-vv-as=" " data-vv-name="7" data-vv-scope="7" data-vv-validate-on="blur|input" class="" data-vv-id="7" aria-required="false" aria-invalid="false">
    <!---->
</div>
`;

exports[`Required input failing validation mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input<span aria-label="Required">*</span></label>
    <input aria-describedby="error-input-1" aria-label="My Input" id="input-1" required="required" type="text" data-vv-as=" " data-vv-name="10" data-vv-scope="10" data-vv-validate-on="blur|input"
        class="b-error-border" data-vv-id="10" aria-required="true" aria-invalid="true">
    <div id="error-input-1" class="b-error-text"><span>
      The   field is required.
    </span></div>
</div>
`;

exports[`Required input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input<span aria-label="Required">*</span></label>
    <input aria-describedby="" aria-label="My Input" id="input-1" required="required" type="text" data-vv-as=" " data-vv-name="5" data-vv-scope="5" data-vv-validate-on="blur|input" class="" data-vv-id="5"
        aria-required="true" aria-invalid="false">
    <!---->
</div>
`;

exports[`Text input mounted html should match snapshot 1`] = `
<div class="b-input b-flex-column">
    <label for="input-1" class="">
        My Input
        <!---->
    </label>
    <input aria-describedby="" aria-label="My Input" id="input-1" type="text" data-vv-as=" " data-vv-name="1" data-vv-scope="1" data-vv-validate-on="blur|input" class="" data-vv-id="1" aria-required="false" aria-invalid="false">
    <!---->
</div>
`;
